# ThinKit tests that run on Ondatra.

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_library(
    name = "util",
    testonly = 1,
    srcs = ["util.cc"],
    hdrs = ["util.h"],
    deps = [
        "@com_github_sonic_net_sonic_pins//gutil/gutil:testing",
        "@com_github_p4lang_p4runtime//:p4info_cc_proto",
        "@com_google_absl//absl/flags:flag",
    ],
)

cc_test(
    name = "random_blackbox_events_test",
    timeout = "long",
    srcs = ["random_blackbox_events_test.cc"],
    linkstatic = 1,
    tags = [
        "exclusive",
        "external",
        "experimental",
        "manual",
        "notap",
    ],
    deps = [
        "//infrastructure/thinkit:ondatra_params",
        "@com_github_sonic_net_sonic_pins//tests/integration/system:random_blackbox_events_tests",
        "@com_github_sonic_net_sonic_pins//thinkit:generic_testbed_fixture",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_main",
    ],
    linkopts = ["-lresolv"],
)

cc_test(
    name = "arbitration_test",
    timeout = "long",
    srcs = [
        "arbitration_test.cc",
    ],
    linkstatic = 1,
    tags = [
        "exclusive",
        "external",
        "experimental",
        "manual",
        "notap",
    ],
    deps = [
        ":util",
        "//infrastructure/thinkit:ondatra_params",
        "@com_github_sonic_net_sonic_pins//tests/forwarding:arbitration_test",
        "@com_github_sonic_net_sonic_pins//thinkit:mirror_testbed_fixture",
        "@com_github_google_glog//:glog",
        "@com_github_grpc_grpc//:grpc++",
        "@com_github_p4lang_p4runtime//:p4runtime_cc_proto",
        "@com_google_googletest//:gtest_main",
    ],
    linkopts = ["-lresolv"],
)

cc_test(
    name = "configure_mirror_testbed_test",
    timeout = "long",
    srcs = [
        "configure_mirror_testbed_test.cc",
    ],
    linkstatic = 1,
    tags = [
        "exclusive",
        "external",
        "experimental",
        "manual",
        "notap",
    ],
    deps = [
        "@com_github_sonic_net_sonic_pins//gutil/gutil:testing",
        "//infrastructure/thinkit:ondatra_params",
        "@com_github_sonic_net_sonic_pins//tests/forwarding:configure_mirror_testbed_test",
        "@com_github_sonic_net_sonic_pins//thinkit:mirror_testbed_fixture",
        "@com_github_p4lang_p4runtime//:p4info_cc_proto",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
    linkopts = ["-lresolv"],
)

cc_test(
    name = "arriba_test",
    timeout = "long",
    srcs = ["arriba_test.cc"],
    linkstatic = 1,
    tags = [
        "exclusive",
        "external",
        "experimental",
        "manual",
        "notap",
    ],
    deps = [
        "@com_github_sonic_net_sonic_pins//dvaas:test_vector_cc_proto",
        "@com_github_sonic_net_sonic_pins//gutil/gutil:testing",
        "//infrastructure/thinkit:ondatra_params",
        "@com_github_sonic_net_sonic_pins//tests/forwarding:arriba_test",
        "@com_github_sonic_net_sonic_pins//thinkit:mirror_testbed_fixture",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_main",
    ],
    linkopts = ["-lresolv"],
)
