load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//tests:ondatra_test.bzl", "ondatra_test", "ondatra_test_suite")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)


# Ethernet Counter Tests (two switches)
ondatra_test(
    name = "ethcounter_sw_dual_switch_test",
    srcs = ["ethcounter_sw_dual_switch_test.go"],
    deps = [
        "//infrastructure/binding:pinsbind",
        "//infrastructure/testhelper",
        "@com_github_google_gopacket//:gopacket",
        "@com_github_google_gopacket//layers",
        "@com_github_openconfig_ondatra//:go_default_library",
        "@com_github_openconfig_ondatra//gnmi",
        "@com_github_openconfig_ondatra//gnmi/oc",
        "@com_github_pkg_errors//:errors",
    ],
)

# gNMI Features: Long Stress Test
ondatra_test(
    name = "gnmi_long_stress_test",
    srcs = ["gnmi_long_stress_test.go"],
    run_timeout = "500m",
    deps = [
        ":gnmi_stress_helper",
        "//infrastructure/binding:pinsbind",
        "//infrastructure/testhelper",
        "@com_github_openconfig_ondatra//:go_default_library",
    ],
)

# Gnoi File tests
ondatra_test(
    name = "gnoi_file_test",
    srcs = ["gnoi_file_test.go"],
    deps = [
        "//infrastructure/binding:pinsbind",
        "//infrastructure/testhelper",
        "@com_github_openconfig_gnoi//file:file_go_proto",
        "@com_github_openconfig_ondatra//:go_default_library",
    ],
)
